Update Code > Add 12 Page with each page different style

--- a/Index02.html
+++ b/Index02.html
@@ -46,48 +46,48 @@
             </div>
         </div>
     </nav>
-    
 
     <div class="container">
+        <h4>Timeline Style : Demo-2</h4>
         <div class="row">
             <div class="col-md-12">
-                <div class="main-timeline">
-                    <a href="#" class="timeline">
-                        <div class="timeline-icon"><i class="fa fa-globe"></i></div>
-                        <div class="timeline-content">
+                <div class="main-timeline2">
+                    <div class="timeline">
+                        <span class="icon fa fa-globe"></span>
+                        <a href="#" class="timeline-content">
                             <h3 class="title">Web Designer</h3>
                             <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ducimus officiis quod! Aperiam eveniet nam nostrum odit quasi ullam voluptatum.
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer malesuada tellus lorem, et condimentum neque commodo quis.
                             </p>
-                        </div>
-                    </a>
-                    <a href="#" class="timeline">
-                        <div class="timeline-icon"><i class="fa fa-rocket"></i></div>
-                        <div class="timeline-content">
+                        </a>
+                    </div>
+                    <div class="timeline">
+                        <span class="icon fa fa-rocket"></span>
+                        <a href="#" class="timeline-content">
                             <h3 class="title">Web Developer</h3>
                             <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ducimus officiis quod! Aperiam eveniet nam nostrum odit quasi ullam voluptatum.
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer malesuada tellus lorem, et condimentum neque commodo quis.
                             </p>
-                        </div>
-                    </a>
-                    <a href="#" class="timeline">
-                        <div class="timeline-icon"><i class="fa fa-briefcase"></i></div>
-                        <div class="timeline-content">
+                        </a>
+                    </div>
+                    <div class="timeline">
+                        <span class="icon fa fa-briefcase"></span>
+                        <a href="#" class="timeline-content">
                             <h3 class="title">Web Designer</h3>
                             <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ducimus officiis quod! Aperiam eveniet nam nostrum odit quasi ullam voluptatum.
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer malesuada tellus lorem, et condimentum neque commodo quis.
                             </p>
-                        </div>
-                    </a>
-                    <a href="#" class="timeline">
-                        <div class="timeline-icon"><i class="fa fa-mobile"></i></div>
-                        <div class="timeline-content">
+                        </a>
+                    </div>
+                    <div class="timeline">
+                        <span class="icon fa fa-mobile"></span>
+                        <a href="#" class="timeline-content">
                             <h3 class="title">Web Developer</h3>
                             <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ducimus officiis quod! Aperiam eveniet nam nostrum odit quasi ullam voluptatum.
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer malesuada tellus lorem, et condimentum neque commodo quis.
                             </p>
-                        </div>
-                    </a>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
