--- a/Index05.html
+++ b/Index05.html
@@ -46,53 +46,51 @@
             </div>
         </div>
     </nav>
-    
 
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <div class="main-timeline">
-                    <a href="#" class="timeline">
-                        <div class="timeline-icon"><i class="fa fa-globe"></i></div>
+                <div class="main-timeline5">
+                    <div class="timeline">
+                        <div class="timeline-icon"><span class="year">2018</span></div>
                         <div class="timeline-content">
-                            <h3 class="title">Web Designer</h3>
+                            <h3 class="title">Web Desginer</h3>
                             <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ducimus officiis quod! Aperiam eveniet nam nostrum odit quasi ullam voluptatum.
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia mi ultrices, luctus nunc ut, commodo enim. Vivamus sem erat.
                             </p>
                         </div>
-                    </a>
-                    <a href="#" class="timeline">
-                        <div class="timeline-icon"><i class="fa fa-rocket"></i></div>
-                        <div class="timeline-content">
-                            <h3 class="title">Web Developer</h3>
-                            <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ducimus officiis quod! Aperiam eveniet nam nostrum odit quasi ullam voluptatum.
-                            </p>
-                        </div>
-                    </a>
-                    <a href="#" class="timeline">
-                        <div class="timeline-icon"><i class="fa fa-briefcase"></i></div>
-                        <div class="timeline-content">
-                            <h3 class="title">Web Designer</h3>
-                            <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ducimus officiis quod! Aperiam eveniet nam nostrum odit quasi ullam voluptatum.
-                            </p>
-                        </div>
-                    </a>
-                    <a href="#" class="timeline">
-                        <div class="timeline-icon"><i class="fa fa-mobile"></i></div>
+                    </div>
+                    <div class="timeline">
+                        <div class="timeline-icon"><span class="year">2017</span></div>
                         <div class="timeline-content">
                             <h3 class="title">Web Developer</h3>
                             <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ducimus officiis quod! Aperiam eveniet nam nostrum odit quasi ullam voluptatum.
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia mi ultrices, luctus nunc ut, commodo enim. Vivamus sem erat.
                             </p>
                         </div>
-                    </a>
+                    </div>
+                    <div class="timeline">
+                        <div class="timeline-icon"><span class="year">2016</span></div>
+                        <div class="timeline-content">
+                            <h3 class="title">Web Desginer</h3>
+                            <p class="description">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia mi ultrices, luctus nunc ut, commodo enim. Vivamus sem erat.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="timeline">
+                        <div class="timeline-icon"><span class="year">2015</span></div>
+                        <div class="timeline-content">
+                            <h3 class="title">Web Developer</h3>
+                            <p class="description">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia mi ultrices, luctus nunc ut, commodo enim. Vivamus sem erat.
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-
     <!-- Modern Footer -->
     <footer class="footer">
         <div class="container">
