--- a/Index06.html
+++ b/Index06.html
@@ -46,48 +46,61 @@
             </div>
         </div>
     </nav>
-    
 
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="main-timeline">
-                    <a href="#" class="timeline">
-                        <div class="timeline-icon"><i class="fa fa-globe"></i></div>
-                        <div class="timeline-content">
-                            <h3 class="title">Web Designer</h3>
-                            <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ducimus officiis quod! Aperiam eveniet nam nostrum odit quasi ullam voluptatum.
-                            </p>
+    <div class="demo">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="main-timeline6">
+                        <div class="timeline">
+                            <div class="timeline-content">
+                                <span class="year">2018</span>
+                                <div class="content-inner">
+                                    <span class="icon"><i class="fa fa-globe"></i></span>
+                                    <h3 class="title">Web Designer</h3>
+                                    <p class="description">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer malesuada tellus lorem, et condimentum neque commodo quis. Quisque eu ornare risus, vitae fermentum eros. Etiam venenatis ac.
+                                    </p>
+                                </div>
+                            </div>
                         </div>
-                    </a>
-                    <a href="#" class="timeline">
-                        <div class="timeline-icon"><i class="fa fa-rocket"></i></div>
-                        <div class="timeline-content">
-                            <h3 class="title">Web Developer</h3>
-                            <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ducimus officiis quod! Aperiam eveniet nam nostrum odit quasi ullam voluptatum.
-                            </p>
+                        <div class="timeline">
+                            <div class="timeline-content">
+                                <span class="year">2017</span>
+                                <div class="content-inner">
+                                    <span class="icon"><i class="fa fa-rocket"></i></span>
+                                    <h3 class="title">Web Developer</h3>
+                                    <p class="description">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer malesuada tellus lorem, et condimentum neque commodo quis. Quisque eu ornare risus, vitae fermentum eros. Etiam venenatis ac.
+                                    </p>
+                                </div>
+                            </div>
                         </div>
-                    </a>
-                    <a href="#" class="timeline">
-                        <div class="timeline-icon"><i class="fa fa-briefcase"></i></div>
-                        <div class="timeline-content">
-                            <h3 class="title">Web Designer</h3>
-                            <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ducimus officiis quod! Aperiam eveniet nam nostrum odit quasi ullam voluptatum.
-                            </p>
+                        <div class="timeline">
+                            <div class="timeline-content">
+                                <span class="year">2016</span>
+                                <div class="content-inner">
+                                    <span class="icon"><i class="fa fa-briefcase"></i></span>
+                                    <h3 class="title">Web Designer</h3>
+                                    <p class="description">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer malesuada tellus lorem, et condimentum neque commodo quis. Quisque eu ornare risus, vitae fermentum eros. Etiam venenatis ac.
+                                    </p>
+                                </div>
+                            </div>
                         </div>
-                    </a>
-                    <a href="#" class="timeline">
-                        <div class="timeline-icon"><i class="fa fa-mobile"></i></div>
-                        <div class="timeline-content">
-                            <h3 class="title">Web Developer</h3>
-                            <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ducimus officiis quod! Aperiam eveniet nam nostrum odit quasi ullam voluptatum.
-                            </p>
+                        <div class="timeline">
+                            <div class="timeline-content">
+                                <span class="year">2015</span>
+                                <div class="content-inner">
+                                    <span class="icon"><i class="fa fa-mobile"></i></span>
+                                    <h3 class="title">Web Developer</h3>
+                                    <p class="description">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer malesuada tellus lorem, et condimentum neque commodo quis. Quisque eu ornare risus, vitae fermentum eros. Etiam venenatis ac.
+                                    </p>
+                                </div>
+                            </div>
                         </div>
-                    </a>
+                    </div>
                 </div>
             </div>
         </div>
