--- a/Index08.html
+++ b/Index08.html
@@ -46,48 +46,51 @@
             </div>
         </div>
     </nav>
-    
 
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <div class="main-timeline">
-                    <a href="#" class="timeline">
-                        <div class="timeline-icon"><i class="fa fa-globe"></i></div>
+                <div class="main-timeline8">
+                    <div class="timeline">
+                        <span class="timeline-icon"></span>
+                        <span class="year">2017</span>
                         <div class="timeline-content">
-                            <h3 class="title">Web Designer</h3>
+                            <h3 class="title">Web Desginer</h3>
                             <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ducimus officiis quod! Aperiam eveniet nam nostrum odit quasi ullam voluptatum.
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mattis justo id pulvinar suscipit. Pellentesque rutrum vehicula erat sed dictum. Integer quis turpis magna. Suspendisse tincidunt elit at erat tincidunt, vel vulputate arcu dapibus. Etiam accumsan ornare posuere. Nullam est.
                             </p>
                         </div>
-                    </a>
-                    <a href="#" class="timeline">
-                        <div class="timeline-icon"><i class="fa fa-rocket"></i></div>
-                        <div class="timeline-content">
-                            <h3 class="title">Web Developer</h3>
-                            <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ducimus officiis quod! Aperiam eveniet nam nostrum odit quasi ullam voluptatum.
-                            </p>
-                        </div>
-                    </a>
-                    <a href="#" class="timeline">
-                        <div class="timeline-icon"><i class="fa fa-briefcase"></i></div>
-                        <div class="timeline-content">
-                            <h3 class="title">Web Designer</h3>
-                            <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ducimus officiis quod! Aperiam eveniet nam nostrum odit quasi ullam voluptatum.
-                            </p>
-                        </div>
-                    </a>
-                    <a href="#" class="timeline">
-                        <div class="timeline-icon"><i class="fa fa-mobile"></i></div>
+                    </div>
+                    <div class="timeline">
+                        <span class="timeline-icon"></span>
+                        <span class="year">2016</span>
                         <div class="timeline-content">
                             <h3 class="title">Web Developer</h3>
                             <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ducimus officiis quod! Aperiam eveniet nam nostrum odit quasi ullam voluptatum.
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mattis justo id pulvinar suscipit. Pellentesque rutrum vehicula erat sed dictum. Integer quis turpis magna. Suspendisse tincidunt elit at erat tincidunt, vel vulputate arcu dapibus. Etiam accumsan ornare posuere. Nullam est.
                             </p>
                         </div>
-                    </a>
+                    </div>
+                    <div class="timeline">
+                        <span class="timeline-icon"></span>
+                        <span class="year">2015</span>
+                        <div class="timeline-content">
+                            <h3 class="title">Web Desginer</h3>
+                            <p class="description">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mattis justo id pulvinar suscipit. Pellentesque rutrum vehicula erat sed dictum. Integer quis turpis magna. Suspendisse tincidunt elit at erat tincidunt, vel vulputate arcu dapibus. Etiam accumsan ornare posuere. Nullam est.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="timeline">
+                        <span class="timeline-icon"></span>
+                        <span class="year">2014</span>
+                        <div class="timeline-content">
+                            <h3 class="title">Web Developer</h3>
+                            <p class="description">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mattis justo id pulvinar suscipit. Pellentesque rutrum vehicula erat sed dictum. Integer quis turpis magna. Suspendisse tincidunt elit at erat tincidunt, vel vulputate arcu dapibus. Etiam accumsan ornare posuere. Nullam est.
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
