--- a/Index09.html
+++ b/Index09.html
@@ -46,48 +46,63 @@
             </div>
         </div>
     </nav>
-    
 
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <div class="main-timeline">
-                    <a href="#" class="timeline">
-                        <div class="timeline-icon"><i class="fa fa-globe"></i></div>
+                <div class="main-timeline9">
+                    <div class="timeline">
                         <div class="timeline-content">
-                            <h3 class="title">Web Designer</h3>
-                            <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ducimus officiis quod! Aperiam eveniet nam nostrum odit quasi ullam voluptatum.
-                            </p>
+                            <div class="circle"><span><i class="fa fa-globe"></i></span></div>
+                            <div class="content">
+                                <span class="year">2014 - 2015</span>
+                                <h4 class="title">Web Desginer</h4>
+                                <p class="description">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce non lectus justo. Nam ultricies laoreet massa sed maximus. Curabitur tristique sagittis scelerisque. Vivamus posuere nisi quis tortor interdum, in finibus risus convallis. Suspendisse efficitur lacus a nulla commodo, sit amet vestibulum nibh.
+                                </p>
+                                <div class="icon"><span></span></div>
+                            </div>
                         </div>
-                    </a>
-                    <a href="#" class="timeline">
-                        <div class="timeline-icon"><i class="fa fa-rocket"></i></div>
+                    </div>
+                    <div class="timeline">
                         <div class="timeline-content">
-                            <h3 class="title">Web Developer</h3>
-                            <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ducimus officiis quod! Aperiam eveniet nam nostrum odit quasi ullam voluptatum.
-                            </p>
+                            <div class="circle"><span><i class="fa fa-rocket"></i></span></div>
+                            <div class="content">
+                                <span class="year">2015 - 2016</span>
+                                <h4 class="title">Web Developer</h4>
+                                <p class="description">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce non lectus justo. Nam ultricies laoreet massa sed maximus. Curabitur tristique sagittis scelerisque. Vivamus posuere nisi quis tortor interdum, in finibus risus convallis. Suspendisse efficitur lacus a nulla commodo, sit amet vestibulum nibh.
+                                </p>
+                                <div class="icon"><span></span></div>
+                            </div>
                         </div>
-                    </a>
-                    <a href="#" class="timeline">
-                        <div class="timeline-icon"><i class="fa fa-briefcase"></i></div>
+                    </div>
+                    <div class="timeline">
                         <div class="timeline-content">
-                            <h3 class="title">Web Designer</h3>
-                            <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ducimus officiis quod! Aperiam eveniet nam nostrum odit quasi ullam voluptatum.
-                            </p>
+                            <div class="circle"><span><i class="fa fa-briefcase"></i></span></div>
+                            <div class="content">
+                                <span class="year">2016 - 2017</span>
+                                <h4 class="title">Web Desginer</h4>
+                                <p class="description">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce non lectus justo. Nam ultricies laoreet massa sed maximus. Curabitur tristique sagittis scelerisque. Vivamus posuere nisi quis tortor interdum, in finibus risus convallis. Suspendisse efficitur lacus a nulla commodo, sit amet vestibulum nibh.
+                                </p>
+                                <div class="icon"><span></span></div>
+                            </div>
                         </div>
-                    </a>
-                    <a href="#" class="timeline">
-                        <div class="timeline-icon"><i class="fa fa-mobile"></i></div>
+                    </div>
+                    <div class="timeline">
                         <div class="timeline-content">
-                            <h3 class="title">Web Developer</h3>
-                            <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ducimus officiis quod! Aperiam eveniet nam nostrum odit quasi ullam voluptatum.
-                            </p>
+                            <div class="circle"><span><i class="fa fa-mobile"></i></span></div>
+                            <div class="content">
+                                <span class="year">2017 - 2018</span>
+                                <h4 class="title">Web Developer</h4>
+                                <p class="description">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce non lectus justo. Nam ultricies laoreet massa sed maximus. Curabitur tristique sagittis scelerisque. Vivamus posuere nisi quis tortor interdum, in finibus risus convallis. Suspendisse efficitur lacus a nulla commodo, sit amet vestibulum nibh.
+                                </p>
+                                <div class="icon"><span></span></div>
+                            </div>
                         </div>
-                    </a>
+                    </div>
                 </div>
             </div>
         </div>
