--- a/Index12.html
+++ b/Index12.html
@@ -46,48 +46,71 @@
             </div>
         </div>
     </nav>
-    
 
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <div class="main-timeline">
-                    <a href="#" class="timeline">
-                        <div class="timeline-icon"><i class="fa fa-globe"></i></div>
+                <div class="main-timeline12">
+                    <div class="col-md-2 col-sm-4 timeline">
+                        <span class="timeline-icon">
+                            <i class="fa fa-key"></i>
+                        </span>
+                        <div class="border"></div>
                         <div class="timeline-content">
-                            <h3 class="title">Web Designer</h3>
-                            <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ducimus officiis quod! Aperiam eveniet nam nostrum odit quasi ullam voluptatum.
-                            </p>
+                            <h4 class="title">Williamson</h4>
+                            <p class="description">Lorem ipsum dolor sit amet, consectetur.</p>
                         </div>
-                    </a>
-                    <a href="#" class="timeline">
-                        <div class="timeline-icon"><i class="fa fa-rocket"></i></div>
+                    </div>
+                    <div class="col-md-2 col-sm-4 timeline">
                         <div class="timeline-content">
-                            <h3 class="title">Web Developer</h3>
-                            <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ducimus officiis quod! Aperiam eveniet nam nostrum odit quasi ullam voluptatum.
-                            </p>
+                            <h4 class="title">Kristiana</h4>
+                            <p class="description">Lorem ipsum dolor sit amet, consectetur.</p>
                         </div>
-                    </a>
-                    <a href="#" class="timeline">
-                        <div class="timeline-icon"><i class="fa fa-briefcase"></i></div>
+                        <div class="border"></div>
+                            <span class="timeline-icon">
+                                <i class="fa fa-key"></i>
+                            </span>
+                    </div>
+                    <div class="col-md-2 col-sm-4 timeline">
+                        <span class="timeline-icon">
+                            <i class="fa fa-key"></i>
+                        </span>
+                        <div class="border"></div>
                         <div class="timeline-content">
-                            <h3 class="title">Web Designer</h3>
-                            <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ducimus officiis quod! Aperiam eveniet nam nostrum odit quasi ullam voluptatum.
-                            </p>
+                            <h4 class="title">Steve thomas</h4>
+                            <p class="description">Lorem ipsum dolor sit amet, consectetur.</p>
                         </div>
-                    </a>
-                    <a href="#" class="timeline">
-                        <div class="timeline-icon"><i class="fa fa-mobile"></i></div>
+                    </div>
+                    <div class="col-md-2 col-sm-4 timeline">
                         <div class="timeline-content">
-                            <h3 class="title">Web Developer</h3>
-                            <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ducimus officiis quod! Aperiam eveniet nam nostrum odit quasi ullam voluptatum.
-                            </p>
+                            <h4 class="title">Miranda joy</h4>
+                            <p class="description">Lorem ipsum dolor sit amet, consectetur.</p>
                         </div>
-                    </a>
+                        <div class="border"></div>
+                        <span class="timeline-icon">
+                            <i class="fa fa-key"></i>
+                        </span>
+                    </div>
+                    <div class="col-md-2 col-sm-4 timeline">
+                        <span class="timeline-icon">
+                            <i class="fa fa-key"></i>
+                        </span>
+                        <div class="border"></div>
+                        <div class="timeline-content">
+                            <h4 class="title">Williamson</h4>
+                            <p class="description">Lorem ipsum dolor sit amet, consectetur.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-2 col-sm-4 timeline">
+                        <div class="timeline-content">
+                            <h4 class="title">Kristiana</h4>
+                            <p class="description">Lorem ipsum dolor sit amet, consectetur.</p>
+                        </div>
+                        <div class="border"></div>
+                        <span class="timeline-icon">
+                            <i class="fa fa-key"></i>
+                        </span>
+                    </div>
                 </div>
             </div>
         </div>
