--- a/Index6B.html
+++ b/Index6B.html
@@ -46,48 +46,51 @@
             </div>
         </div>
     </nav>
-    
 
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <div class="main-timeline">
-                    <a href="#" class="timeline">
+                <div class="main-timeline7">
+                    <div class="timeline">
                         <div class="timeline-icon"><i class="fa fa-globe"></i></div>
+                        <span class="year">2018</span>
                         <div class="timeline-content">
-                            <h3 class="title">Web Designer</h3>
+                            <h5 class="title">Web Desginer</h5>
                             <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ducimus officiis quod! Aperiam eveniet nam nostrum odit quasi ullam voluptatum.
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum mattis felis vitae risus pulvinar tincidunt. Nam ac venenatis enim. Aenean hendrerit justo sed.
                             </p>
                         </div>
-                    </a>
-                    <a href="#" class="timeline">
+                    </div>
+                    <div class="timeline">
                         <div class="timeline-icon"><i class="fa fa-rocket"></i></div>
+                        <span class="year">2017</span>
                         <div class="timeline-content">
-                            <h3 class="title">Web Developer</h3>
+                            <h5 class="title">Web Developer</h5>
                             <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ducimus officiis quod! Aperiam eveniet nam nostrum odit quasi ullam voluptatum.
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum mattis felis vitae risus pulvinar tincidunt. Nam ac venenatis enim. Aenean hendrerit justo sed.
                             </p>
                         </div>
-                    </a>
-                    <a href="#" class="timeline">
+                    </div>
+                    <div class="timeline">
                         <div class="timeline-icon"><i class="fa fa-briefcase"></i></div>
+                        <span class="year">2016</span>
                         <div class="timeline-content">
-                            <h3 class="title">Web Designer</h3>
+                            <h5 class="title">Web Desginer</h5>
                             <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ducimus officiis quod! Aperiam eveniet nam nostrum odit quasi ullam voluptatum.
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum mattis felis vitae risus pulvinar tincidunt. Nam ac venenatis enim. Aenean hendrerit justo sed.
                             </p>
                         </div>
-                    </a>
-                    <a href="#" class="timeline">
+                    </div>
+                    <div class="timeline">
                         <div class="timeline-icon"><i class="fa fa-mobile"></i></div>
+                        <span class="year">2015</span>
                         <div class="timeline-content">
-                            <h3 class="title">Web Developer</h3>
+                            <h5 class="title">Web Developer</h5>
                             <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ducimus officiis quod! Aperiam eveniet nam nostrum odit quasi ullam voluptatum.
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum mattis felis vitae risus pulvinar tincidunt. Nam ac venenatis enim. Aenean hendrerit justo sed.
                             </p>
                         </div>
-                    </a>
+                    </div>
                 </div>
             </div>
         </div>
